--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,7 @@ Django==4.2.3
 idna==3.4
 numpy==1.25.1
 opencv-python==4.8.0.74
+pytz==2023.3
 requests==2.31.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
