--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,11 +1,18 @@
 asgiref==3.7.2
+async-timeout==4.0.2
 certifi==2023.5.7
+channels==4.0.0
+channels-redis==4.1.0
 charset-normalizer==3.2.0
 Django==4.2.3
+django-bootstrap-static==4.2.1
 idna==3.4
+msgpack==1.0.5
 numpy==1.25.1
 opencv-python==4.8.0.74
+Pillow==10.0.0
 pytz==2023.3
+redis==4.6.0
 requests==2.31.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
