--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -15,7 +15,9 @@ cryptography==41.0.1
 daphne==4.0.0
 Django==4.2.3
 django-bootstrap-static==4.2.1
+django-cors-headers==4.2.0
 django-cropperjs==0.0.5
+djangorestframework==3.14.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
