--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -18,6 +18,7 @@ django-bootstrap-static==4.2.1
 django-cors-headers==4.2.0
 django-cropperjs==0.0.5
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
@@ -28,6 +29,7 @@ Pillow==10.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
+PyJWT==2.8.0
 pyOpenSSL==23.2.0
 pytz==2023.3
 redis==4.6.0
