--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-scratch-card": "^1.1.0",
     "react-native-screens": "~3.20.0",
     "react-native-swipe-cards-deck": "^0.3.0",
     "react-native-web": "~0.18.10"
