--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-native-scratch-card": "^1.1.0",
     "react-native-screens": "~3.20.0",
     "react-native-swipe-cards-deck": "^0.3.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
