--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "react-native-screens": "~3.20.0",
     "react-native-swipe-cards-deck": "^0.3.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
